...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_likes"
        tools:listitem="@layout/layout_quote_item" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addQuoteFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="Add"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
...
